# longevity-intelligence-platform

./: .env.example  .gitignore  PORTFOLIO.md  README.md  docker-compose.yml  pyproject.toml  run_api.py
.claude/: launch.json
api/: main.py
api/routers/: bioage.py  coach.py  food.py  health.py  mortality.py  twin.py
api/schemas/: bioage.py
config/: api.yaml  base.yaml  bioage.yaml  mortality.yaml  twin.yaml
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/coach/: page.tsx
dashboard/src/app/risk/: page.tsx
dashboard/src/app/twin/: page.tsx
dashboard/src/components/bioage/: bioage-form.tsx  bioage-result-card.tsx  shap-waterfall-chart.tsx
dashboard/src/components/coach/: chat-interface.tsx
dashboard/src/components/layout/: sidebar.tsx
dashboard/src/components/twin/: trajectory-chart.tsx
dashboard/src/components/ui/: button.tsx  card.tsx  input.tsx  slider.tsx
dashboard/src/lib/: constants.ts
dashboard/src/lib/api/: bioage.ts  client.ts  coach.ts  twin.ts
dashboard/src/lib/hooks/: use-bioage.ts  use-coach.ts
dashboard/src/lib/types/: bioage.ts  coach.ts  twin.ts
data/: catalog.yaml
docker/: api.Dockerfile
notebooks/: colab_train.ipynb
scripts/: download_nhanes.py  run_pipeline.py  train_bioage.py
src/longevity/coach/: client.py
src/longevity/coach/prompts/: system.txt
src/longevity/common/: config.py  exceptions.py  logging.py  types.py  validation.py
src/longevity/data/nhanes/: downloader.py  features.py  harmonizer.py  parser.py
src/longevity/explainability/: report.py  shap_explainer.py
src/longevity/models/: base.py
src/longevity/models/bioage/: blood_clock.py  trainer.py
src/longevity/models/mortality/: cause_specific.py  cox_model.py
src/longevity/models/twin/: simulator.py
